syntax = "proto3";

package api.dynamic_pricing.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "ecommerce/api/dynamic_pricing/v1;v1";

// DynamicPricingService 动态定价服务定义了所有与动态定价相关的RPC接口。
service DynamicPricingService {
  // CalculatePrice 计算动态价格
  rpc CalculatePrice(CalculatePriceRequest) returns (CalculatePriceResponse);
  
  // GetLatestPrice 获取最新价格
  rpc GetLatestPrice(GetLatestPriceRequest) returns (GetLatestPriceResponse);

  // --- 策略管理 ---
  rpc SaveStrategy(SaveStrategyRequest) returns (google.protobuf.Empty);
  rpc ListStrategies(ListStrategiesRequest) returns (ListStrategiesResponse);
}

// PricingRequest 定价请求
message CalculatePriceRequest {
  uint64 sku_id = 1;
  int64 base_price = 2;
  int32 current_stock = 3;
  int32 total_stock = 4;
  int32 daily_demand = 5;
  int32 average_daily_demand = 6;
  int64 competitor_price = 7;
}

// DynamicPrice 动态价格
message DynamicPrice {
  uint64 sku_id = 1;
  int64 base_price = 2;
  int64 final_price = 3;
  double price_adjustment = 4;
  double inventory_factor = 5;
  double demand_factor = 6;
  double competitor_factor = 7;
  google.protobuf.Timestamp effective_time = 8;
  google.protobuf.Timestamp expiry_time = 9;
}

message CalculatePriceResponse {
  DynamicPrice price = 1;
}

message GetLatestPriceRequest {
  uint64 sku_id = 1;
}

message GetLatestPriceResponse {
  DynamicPrice price = 1;
}

// PricingStrategy 定价策略
message PricingStrategy {
  uint64 id = 1;
  uint64 sku_id = 2;
  string strategy_type = 3;
  int64 min_price = 4;
  int64 max_price = 5;
  int32 inventory_threshold = 6;
  int32 demand_threshold = 7;
  int64 competitor_price_offset = 8;
  bool enabled = 9;
}

message SaveStrategyRequest {
  PricingStrategy strategy = 1;
}

message ListStrategiesRequest {
  uint32 page_size = 1;
  uint32 page_num = 2;
}

message ListStrategiesResponse {
  repeated PricingStrategy strategies = 1;
  uint64 total_count = 2;
}
